# apis-infos

./: .gitignore  pyproject.toml
.github/workflows/: black.yml  django-tests.yml
apis_infos/: apps.py  models.py  special_views.py  test_models.py  urls.py  views.py
apis_infos/migrations/: 0001_initial.py
apis_infos/templates/browsing/: generic_list.html
apis_infos/templates/infos/: about.html  team.html
apis_infos/templates/webpage/: base.html
apis_infos/templatetags/: infos_extras.py  stats_extras.py
sample_project/: settings.py  urls.py
