[tool.poetry]
name = "apis-infos"
version = "0.1"
description = "Infos app for managing project infos (part of APIS framework)"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
Django = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
