[tool.poetry]
name = "apis-infos"
version = "0.1"
description = "Infos app for managing project infos (part of APIS framework)"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
django-tables2 = "^2.5.3"
django-filter = "^2.4.0"
django-crispy-forms = "^1.10.0"
Django = "^4.1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
faker = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
